apps/network/traefik/reverse-proxy/nas-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: default
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.31.99
    ports:
      - name: https
        port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.umhomelab.com`) || Host(`www.nas.umhomelab.com`)
      kind: Rule
      services:
        - name: truenas
          namespace: default
          port: 443
          scheme: https
          serversTransport: skip-ssl
  tls: {}
