apps/network/traefik/reverse-proxy/proxmox-e1-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-e1
  namespace: default
spec:
  ports:
    - name: http
      port: 443
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-e1
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.31.85
    ports:
      - name: http
        port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-e1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`e1.umhomelab.com`) || Host(`www.e1.umhomelab.com`)
      kind: Rule
      services:
        - name: proxmox-e1
          namespace: default
          port: 443
          scheme: https
          serversTransport: skip-ssl
  tls: {}
