apps/network/traefik/reverse-proxy/proxmox-e2-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-e2
  namespace: default
spec:
  ports:
    - name: http
      port: 443
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-e2
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.31.86
    ports:
      - name: http
        port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-e2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`e2.umhomelab.com`) || Host(`www.e2.umhomelab.com`)
      kind: Rule
      services:
      - name: proxmox-e2
        namespace: default
        port: 443
        scheme: https
        serversTransport: skip-ssl
  tls: {}
